fixed nav on mobile

--- a/dev/styles/style.scss
+++ b/dev/styles/style.scss
@@ -79,6 +79,9 @@ h1{
 	display: inline-block;
 	position: relative;
 	top: -6px;
+	@media screen and (max-width: $breakMobile){
+		display: none;
+	}
 }
 
 .h1BothLines:before{
@@ -312,6 +315,7 @@ nav{
 			margin: 15px 0;
 			font-size: 1.8rem;
 			a{
+				display: inline-block;
 				background-color: transparent;
 				color: $colorDark;
 				padding: 0;
@@ -368,18 +372,24 @@ header{
 		flex-direction: column;
 		align-items: center;
 		justify-content: center;
+		@media screen and (max-width: $breakSmall){
+			padding-top: 100px;
+			margin-bottom: 60px;
+		}
 		img{
 			max-height: 40vh;
 			max-width: 80vw;
 		}
 		h2{
 			margin: 30px 0 -5px 0;
+			text-align: center;
 		}
 		.headerTag{
 			text-transform: uppercase;
 			color: $colorMedium;
 			font-weight: bold;
 			margin: 10px 0;
+			text-align: center;
 		}
 		.headerMainSearch{
 			position: relative;
@@ -454,7 +464,7 @@ header{
 				font-weight: bold;
 				box-shadow: 5px 5px 50px $colorMedium;
 				@media screen and (max-width: $breakLarge){
-					padding: 10px;
+					padding: 5px;
 				}
 				@media screen and (max-width: $breakMedium){
 					display: block;
@@ -563,7 +573,13 @@ header{
 	@media screen and (max-width: $breakSmall){
 		width: 100%;
 		float: none;
-		margin: 60px 0;
+		margin: 50px 0;
+		&:nth-of-type(2){
+			margin: 0;
+		}
+		&:nth-of-type(3){
+			margin-bottom: 0;
+		}
 	}
 }
 
@@ -609,6 +625,9 @@ header{
 }
 
 .choose{
+	@media screen and (max-width: $breakSmall){
+		padding-bottom: 0;
+	}
 	h1{
 		margin-left: $chooseUsMargin;
 	}
@@ -655,6 +674,9 @@ header{
 		p{
 			margin-top: 20px;
 			width: 70%;
+			@media screen and (max-width: $breakSmall){
+				width: 100%;
+			}
 		}
 		h4{
 			padding-top: 10px;
